feat(api): add /findGuild endpoint
